- sipdigestleak
  - now can attack several IP addresses or network ranges
  - added param -ping to ping the host and connect to them only if it is alive
  - added param --file lo load IPs from a file, with format (ip:port/proto)
- sipenumerate:
  - use threads to run faster
  - show fingerprinting to give more information
- sipping:
  - new module to check if a server/device is alive
- global:
  - bug fixes

v3.2 (Sep/2022)
- sipsend: 
  - added params from_tag, to_tag, branch, callid, cseq, sdp
  - added params user and pass to send a second message with auth if we obtain a code 401/407
  - added param --sdes to send cipher keys in SDP
  - added param --local-ip to force it in case of multiple IP addresses
- sipinvite: 
  - added param --no-sdp to send the INVITE without SDP
  - added param --sdes to send cipher keys in SDP
  - now it is possible to send to a range of callers (To-User) and a range of callees (From-User)
  - added param --local-ip to force it in case of multiple IP addresses
- sipenumerate:
  - added verbose mode
- siprcrack: 
  - added param lenght to force the size of extensions
  - added param user to set the From and To user (by default is prefix+extension). If is set, the prefix only will be applied to Auth User
- siptshark:
  - new module to extract info from a PCAP file
- arpspoof:
  - new module to do an ARP cache poisoning
- sipsniff:
  - new module to sniff SIP traffic
- sipdigestleak:
  - added tls support
  - added param --local-ip to force it in case of multiple IP addresses
- sipscan:
  - added param --output-file to save results
  - added param -fp to fingerprinting
- global:
  - added class Color and param nocolor to show console responses in ansii
  - bug fixes

v3.1.0 (Sep/2022)
- Added parameter From Domain and To Domain to SipScan, SipSend, SipInvite, SipFlood and SipDigestLeak
- SipScan can load IPs or network ranges from a file
- Bug fixes in TLS connections